# model

./: .gitignore  CMakeLists.txt
examples/: CMakeLists.txt
examples/check_degen/: CMakeLists.txt  main.cpp
examples/test/: CMakeLists.txt  main.cpp
includes/model/: model.hpp
src/: model.cpp
